--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,8 @@
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+
+
 	</dependencies>
 
 	<profiles>
@@ -59,6 +61,7 @@
 			</activation>
 			<properties>
 				<lean-jetty.version>${jettyVersion}</lean-jetty.version>
+				<!--suppress UnresolvedMavenProperty -->
 				<lean-jetty.port>${env.LEANCLOUD_APP_PORT}</lean-jetty.port>
 			</properties>
 			<build>
